{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "GamePlay",
            "id": "2c83a776-9b66-4293-866b-62c74f44e2b4",
            "actions": [
                {
                    "name": "HoldAction",
                    "type": "Button",
                    "id": "c1d0c90b-21ba-409f-9011-cb7ae8b58706",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "051590f4-5f36-48a3-b5f5-006b2bfcdace",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HoldAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}